feat(all): add theme support, manual mode, and solving timer，time：2026/03/08/14:55